--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -40,7 +40,7 @@
     <a href="/user_bookings">My bookings</a>
 
     <div class="btn-logout">
-      <%= button_to "Logout", destroy_user_session_path, method: :delete %>
+      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "topnav a"%>
     </div>
   <% end %>
 
