add seeds - reajustement banner

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,7 @@
   background-position: center;
   padding: 250px;
 /*   margin: 20px 70px 20px 70px;
- */  border-radius: 30px;
+ */
 }
 
 x-sign:nth-of-type(9) {
