Footer, Gemfile, a comment in navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -250,7 +250,8 @@ a {
 
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
+  color: black; 
+  // transform: translateY(40px) rotateX(-90deg);
 }
 
 .topnav a.active {
