--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   // justify-content: space-between;
+  flex-direction: column;
   height: 100px;
   padding: 0px 50px;
   color: black;
