--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,47 +15,31 @@
  */
 }
 
-x-sign:nth-of-type(9) {
-  margin: 0;
-  color: yellow;
-  --color1: yellow;
-  --color2: lime;
-  --color3: green;
-  --color4: darkgreen;
-
-  /* color: #F4F4F4;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-weight: bold; */
+@keyframes flickerAnimation {
+  0%   { color : yellow; opacity:1; }
+  20%  { opacity:0; }
+  30% { color: lime; opacity:1; }
+  40%   {color: green; opacity:1; }
+  40%   {color: darkgreen; opacity:1; }
 }
-
-x-sign {
-  --interval: 1s;
-  display: block;
-  font-weight: 32px ;
-  text-shadow:
-  10 0 10px var(--color1),
-  10 0 20px var(--color2),
-  0 0 40px var(--color3),
-  0 0 80px var(--color4);
-  will-change: filter, color;
-  filter: saturate(60%);
-  animation: flicker steps(100) var(--interval) 1s infinite;
-  font-family: 'Monoton';
+@-o-keyframes flickerAnimation{
+  0%   { color: e; opacity:1; }
+  50%  { opacity:0; }
+  100% { color: rgb(21, 42, 21); opacity:1; }
+}
+@-moz-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { color: darkgreen;opacity:1; }
 }
 
 
-
-@keyframes flicker {
-  50% {
-    filter: saturate(200%) hue-rotate(20deg);
-  }
+.animate-flicker {
+   -webkit-animation: flickerAnimation .1s infinite;
+   -moz-animation: flickerAnimation .5s infinite;
+   -o-animation: flickerAnimation .1s infinite;
+    animation: flickerAnimation .5s infinite;
 }
-
-/* .banner h1:hover {
-  color: #3ea5fa;
-  text-shadow: 0 0 5px #3ea5fa, 0 0 25px #3ea5fa, 0 0 50px #3ea5fa, 0 0 200px #3ea5fa;
-  font-weight: bolder;
-} */
 
 
 .card-behavior {
@@ -85,9 +69,7 @@ x-sign {
   transition: transform 500ms ease;
   justify-content: space-around;
   margin: 0px 0px 0px 0px;
-	filter: grayscale(100%);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+
   box-shadow: 0px 5px 20px #999;
 }
 
@@ -95,7 +77,6 @@ x-sign {
 .card:hover,
 .card:focus-within {
   transform: scale(1.05);
-	filter: grayscale(0);
 
 }
 
@@ -124,12 +105,14 @@ x-sign {
   transform: scaleX(0);
   transform-origin: center;
 
+
 }
 
 /* lenght underline */
 .card:hover .card-title::after,
 .card:focus-within .card-title::after {
   transform: scaleX(1);
+ 
 }
 
 /* BUTTON*/
