--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 
     <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1608048608029-99c772d199ed?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1364&q=80);">
       <div class="container">
-        <x-sign>
+        <div  class="animate-flicker">
           Crazy Party Stuff
-        </x-sign>
+        </div>
       </div>
     </div>
 
@@ -22,22 +22,3 @@
 <div class="text-center">
   <a href="./attractions" class="button">Voir toutes les attractions</a>
 </div>
-
-<script>
-const signs = document.querySelectorAll('x-sign')
-const randomIn = (min, max) => (
-  Math.floor(Math.random() * (max - min + 1) + min)
-)
-
-const mixupInterval = el => {
-  const ms = randomIn(2000, 4000)
-  el.style.setProperty('--interval', `${ms}ms`)
-}
-
-signs.forEach(el => {
-  mixupInterval(el)
-  el.addEventListener('webkitAnimationIteration', () => {
-    mixupInterval(el)
-  })
-})
-</script>
