--- a/app/views/bookings/user_bookings.html.erb
+++ b/app/views/bookings/user_bookings.html.erb
@@ -1,6 +1,8 @@
 <h1>My bookings</h1>
 <div class="book">
 
+
+
   <% @bookings.each do |booking|%>
 
   <div class="attracname"><%= booking.attraction.name %></div> /////
@@ -17,6 +19,7 @@
 
   <% end %>
 </div>
+<h2>past bookings: <%= @past_bookings%></h2>
 
 
 <%# montrer réservations %>
