--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name, autofocus: true %>
+    <%= f.input :first_name, required: true, autofocus: true %>
+    <%= f.input :last_name, autofocus: true %>
     <%= f.input :email,
                 required: true,
                 input_html: { autocomplete: "email" }%>
@@ -16,6 +17,8 @@
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
   </div>
+
+  <%= f.input :photo, as: :file, :label => 'Profile picture' %>
 
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
