--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -112,8 +112,6 @@ a {
 
 .topnav {
   background-color: #e9e9e9;
-  padding: 12px;
-  // padding : 12px desactivation Kenza
 }
 
 .topnav a {
@@ -146,7 +144,7 @@ a {
 
 .topnav input[type=text] {
   padding: 6px;
-  margin-top: 8px;
+  margin: 12px 0px;
   font-size: 17px;
   border: none;
   width: 150px;
@@ -155,8 +153,6 @@ a {
 
 .topnav .login-container button {
   float: right;
-  // padding: 6px; mis en commentaire par Kenza; ils empechaient l'alignement
-  // margin-top: -6px; des elements dans la nav-bar
   margin-right: 0px;
   background: #ddd;
   font-size: 17px;
