--- a/app/assets/stylesheets/components/_user-dropdown.scss
+++ b/app/assets/stylesheets/components/_user-dropdown.scss
@@ -9,6 +9,7 @@
 .dropbtn {
   border: none;
   margin-top: 10px;
+  margin-right: 16px;
 }
 
 
@@ -16,6 +17,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
+  right: 15px;
   background-color: #f1f1f1;
   width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -49,6 +51,11 @@
 .btn-logout {
   text-decoration: underline;
   border: none;
-  padding: 12px 16px;
+  margin: 12px 16px;
   color: rgb(147, 146, 146);
+  display: block;
+}
+
+.btn-logout:hover {
+  color: blue;
 }
