--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -16,7 +16,7 @@
   color: black;
   opacity: 0.15;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 14px;
   padding: 0px 10px;
 }
 .footer-links a:hover {
@@ -27,7 +27,7 @@
 }
 
 .footer-copyright {
-  font-size: large;
+  font-size: medium;
   font-weight: bold;
 }
 
