--- a/app/assets/stylesheets/components/_user_bookings.scss
+++ b/app/assets/stylesheets/components/_user_bookings.scss
@@ -1,3 +1,28 @@
+.attractitle {
+  margin: 16px;
+  font-size: 40px;
+  color: #ccc;
+  transition: all 1s ease-in-out;
+  position: relative;
+  font-weight: bolder;
+}
+
+.attractitle:hover {
+  animation: flicker 1.5s infinite alternate;
+  color: #fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px purple,
+    0 0 82px purple,
+    0 0 92px purple,
+    0 0 102px purple,
+    0 0 151px purple;
+  color: rgb(162, 50, 162);
+  position: sticky;
+}
+
 .book {
   background: #F4F4F4;
   color: black;
@@ -18,6 +43,60 @@
   background: #F4F4F4;
   color: black;
   font-weight: bold;
-  font-size: 35px;
+  font-size: 25px;
+  padding: 16px;
+  color: #ccc;
+  text-transform: uppercase;
+  transition: all 1s ease-in-out;
+  position: relative;
+  font-weight: bold;
 }
 
+.attracname:hover{
+  font-size: 30px;
+  color: teal;
+  text-shadow: rgb(12, 198, 189) 10px 10px 10px;
+  }
+
+.attracpic {
+  border-radius: 6px;
+}
+
+.cost {
+  font-size: 20px;
+  padding: 12px;                          
+}
+
+// @keyframes flicker  {
+//   0% {text-shadow:
+//     0 0 0px #fff,
+//     0 0 0px #fff,
+//     0 0 0px #fff,
+//     0 0 0px purple,
+//     0 0 0px purple,
+//     0 0 0px purple,
+//     0 0 0px purple,
+//     0 0 0px purple;}
+//   50% {
+//     text-shadow:
+//     0 0 0px #fff,
+//     0 0 0px #fff,
+//     0 0 1px #fff,
+//     0 0 2px purple,
+//     0 0 8px purple,
+//     0 0 9px purple,
+//     0 0 10px purple,
+//     0 0 15px purple;
+//   }
+//   100% {
+//     text-shadow:
+//     0 0 7px #fff,
+//     0 0 10px #fff,
+//     0 0 21px #fff,
+//     0 0 42px purple,
+//     0 0 82px purple,
+//     0 0 92px purple,
+//     0 0 102px purple,
+//     0 0 151px purple;
+//   }
+// }
