--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,16 +1,20 @@
 <div class="footer">
   <div class="footer-links">
-  <img src="https://img.icons8.com/fluency-systems-filled/48/000000/user.png"/>
+
+  <img src="https://img.icons8.com/external-those-icons-fill-those-icons/24/000000/external-balloon-party-event-those-icons-fill-those-icons.png"/>
+  <%# <img src="https://img.icons8.com/android/24/000000/user.png"/> %>
   <%# <i class="fad fa-user"></i> %>
-  <%# <i class="fa-brands fa-github"></i> %>
-    <a href="#"><img src="https://img.icons8.com/material-outlined/48/000000/youtube--v1.png"/></a>
-    <a href="#"><img src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png"/></i></a>
-    <a href="#"><img src="https://img.icons8.com/fluency-systems-regular/48/000000/facebook.png"/></a>
-    <a href="#"><img src="https://img.icons8.com/material-outlined/48/000000/twitter.png"/></a>
-    <a href="#"><img src="https://img.icons8.com/material-outlined/48/000000/linkedin--v1.png"/></a>
+    <a href="#"><img src="https://img.icons8.com/windows/24/000000/github-squared.png"/></a>
+    <a href="#"><img src="https://img.icons8.com/material-outlined/24/000000/youtube--v1.png"/></a>
+    <a href="#"><img src="https://img.icons8.com/material-outlined/24/000000/instagram-new--v1.png"/></a>
+    <a href="#"><img src="https://img.icons8.com/material-outlined/24/000000/facebook.png"/></a>
+    <a href="#"><img src="https://img.icons8.com/material-outlined/24/000000/twitter.png"/></a>
+    <a href="#"><img src="https://img.icons8.com/material-outlined/24/000000/linkedin--v1.png"/></a>
+
+  <img src="https://img.icons8.com/external-those-icons-fill-those-icons/24/000000/external-balloon-party-event-those-icons-fill-those-icons.png"/>
   </div>
   <div class="footer-copyright">
-    Copyright <img src="https://img.icons8.com/color/48/000000/like--v1.png"/> 2022
+    Copyright <img src="https://img.icons8.com/office/24/000000/like--v1.png"/> 2022
   </div>
 </div>
 
