--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -28,7 +28,6 @@
 
 .footer-copyright {
   font-size: medium;
-  font-weight: bold;
   animation: flicker 1.5s infinite alternate;
   color: #fff;
   text-shadow:
@@ -41,5 +40,6 @@
     0 0 102px rgb(255, 0, 90),
     0 0 151px rgb(255, 0, 90);
   color: rgb(205, 45, 100);
-  margin-top: 8px
+  margin-top: 8px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
