--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,33 +10,11 @@ a {
   font-size: 20px;
   color: #ccc;
   text-transform: uppercase;
-  // font-weight: 500;
   transition: all 1s ease-in-out;
   font-weight: bolder;
-
-  // &::before {
-  //   content: attr(CPS);
-  //   top: 0;
-  //   bottom: 0;
-  //   left: 0;
-  //   right: 0;
-  //   width: 0;
-  //   overflow: hidden;
-  // }
-
-  // &:hover {
-    //   &::before {
-      //     width: 100%;
-      //   }
-      // }
   }
 
     .crazy:hover {
-    // transition: all 1s ease-in-out;
-    // left: 2s;
-    // transition: 2s;
-    // transition-timing-function: ease-in-out;
-    // transition: opacity 0s ease-in 600ms, opacity 600ms;
     animation: flicker 1.5s infinite alternate;
     color: #fff;
     text-shadow:
@@ -55,8 +33,6 @@ a {
   margin: 0px;
   font-size: 30px;
   color: #ccc;
-  // text-transform: uppercase;
-  // font-weight: 500;
   transition: all 1s ease-in-out;
   font-weight: bolder;
   font-family: cursive;
@@ -82,11 +58,8 @@ a {
   font-size: 20px;
   color: #ccc;
   text-transform: uppercase;
-  // font-weight: 500;
   transition: all 1s ease-in-out;
   font-weight: bolder;
-  // font-family: monospace;
-  // font-stretch: expanded;
 }
 
 .stuff:hover {
@@ -117,11 +90,12 @@ a {
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: dimgrey;
   text-align: center;
   padding: 12px 16px;
   text-decoration: none;
   font-size: 16px;
+  font-weight: bolder;
   border-radius: 6px; // Ajout par kenza -- conccordance avec les Buttons
   margin: 5px; // ajout Kenza
 }
@@ -180,4 +154,9 @@ a {
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
+}
+
+
+.notice {
+  text-align: end;
 }
