--- a/app/views/bookings/user_bookings.html.erb
+++ b/app/views/bookings/user_bookings.html.erb
@@ -8,7 +8,7 @@
   <h2 class="attracname">
    <%= booking.attraction.name %>
   </h2>
-  
+
    <div class="date">
       <th>From <strong><%= booking.start_date %></th></strong>
       <th>to <strong><%= booking.end_date %></th></strong>
@@ -25,7 +25,5 @@
 
   <% end %>
 </div>
-<h2>past bookings: <%= @past_bookings%></h2>
 
-
-<%# montrer réservations %>
+<h2 class="pb">Past bookings: <%= @past_bookings%></h2>
