added users to the seeds and added user on attraction_show

--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,9 +1,21 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-<p>
-  <strong><%= @attraction.name %></strong>
-</p>
+<div class="d-flex justify-content-between">
+  <div>
+    <strong><%= @attraction.name %></strong>
+  </div>
+
+  <div>
+    <span class='mx-1'>Owner: <%= @attraction.user.first_name %></span>
+    <% if @attraction.user.photo.attached? %>
+      <img class="avatar mx-1" src="<%= @attraction.user.photo.url %>">
+    <% else %>
+      <img class="avatar mx-1" src="https://www.pasrc.org/sites/g/files/toruqf431/files/styles/freeform_750w/public/2021-03/blank-profile-picture_0.jpg?itok=iSBmDxc8">
+    <% end %>
+  </div>
+</div>
+
 
 <p>
   <%= @attraction.price %> € per day
