message feature, without design

--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -35,8 +35,9 @@
           <img class="avatar dropbtn" src="https://www.pasrc.org/sites/g/files/toruqf431/files/styles/freeform_750w/public/2021-03/blank-profile-picture_0.jpg?itok=iSBmDxc8">
         <% end %>
         <div class="dropdown-content">
-          <a href="/user_bookings">My bookings</a>
-          <a href="/my_attractions">My attractions</a>
+          <a href="/conversations">Inbox&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+          <a href="/user_bookings">My bookings&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+          <a href="/my_attractions">My attractions&nbsp;&nbsp;&nbsp;&nbsp;</a>
           <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn-logout"%>
         </div>
       </div>
