--- a/app/assets/stylesheets/components/_user-dropdown.scss
+++ b/app/assets/stylesheets/components/_user-dropdown.scss
@@ -27,7 +27,7 @@
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 12px 100%;
   text-decoration: none;
   display: block;
 }
@@ -51,6 +51,7 @@
 .btn-logout {
   text-decoration: underline;
   border: none;
+  padding: 0px;
   margin: 12px 16px;
   color: rgb(147, 146, 146);
   display: block;
