--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 // Specific CSS for your home-page
 *,
@@ -6,22 +5,20 @@
 *::after {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  font-weight: 900;
 }
 
 .banner {
-  background-size: cover;
-  background-position: center;
-  padding: 250px ;
-/*   margin: 20px 70px 20px 70px;
- */  border-radius: 30px;
+  // background-size: cover;
+  // background-position: center;
+  background: linear-gradient(to left, transparent, rgb(5, 5, 0));
+  padding: 250px;
+  box-shadow: 0px 5px 20px #999;
 }
 
-
-/* .banner h1:hover {
-  color: #3ea5fa;
-  text-shadow: 0 0 5px #3ea5fa, 0 0 25px #3ea5fa, 0 0 50px #3ea5fa, 0 0 200px #3ea5fa;
-  font-weight: bolder;
-} */
+.banner h1 {
+  color: #F4F4F4;
+}
 
 
 .card-behavior {
@@ -39,7 +36,7 @@
 
 
 .card {
-  color:rgb(3, 3, 3); /*couleur du text */
+  color: #F4F4F4; /*couleur du text */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -51,50 +48,58 @@
   transition: transform 500ms ease;
   justify-content: space-around;
   margin: 0px 0px 0px 0px;
-	filter: grayscale(100%);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
   box-shadow: 0px 5px 20px #999;
+
+}
+
+
+.card-body { // overflow
+  flex: 1 1 auto;
+  padding: 0.1rem;
+  font-size: 18px;
 }
 
 
 .card:hover,
 .card:focus-within {
   transform: scale(1.05);
-	filter: grayscale(0);
-
 }
 
 .card-content {
   --padding: 0.5rem;
   padding:var(--padding);
-  background: linear-gradient( transparent,rgba(17, 16, 16, 0.615));
+
+  background-image: linear-gradient(to top, transparent, rgba(1, 1, 0, 0.82)),
 
 }
 
 .card-title {
   position: relative;
   font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
+
 }
 
 /*underline */
 .card-title::after {
   content: "";
   position: absolute;
-  height: 1.5px;
+  height: 2px; // epaisseur underline
   left: calc(var(--padding) * -1);
   bottom: -2px;
   width: calc(100% + var(--padding));
-  background:#3ea5fa;
   transform: scaleX(0);
-  transform-origin: center;
+  background: #7970fe;
+  transform-origin: left;
+
 
 }
 
 /* lenght underline */
 .card:hover .card-title::after,
 .card:focus-within .card-title::after {
-  transform: scaleX(1);
+  transform: scaleX(0.5);
+  transition: transform  500ms ease;
 }
 
 /* BUTTON*/
@@ -102,27 +107,44 @@
   cursor: pointer;
   display: inline-block;
   text-decoration: none;
-  color: black;
+  color: #F4F4F4;
   padding: 0.2em 1.25em;
-  border-radius: 0.25rem;
-  transform-origin: center;
+  border-radius: 12px;
+  transform-origin: left;
+
+}
+
+.button-attractions {
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  color: #F4F4F4;
+  padding: 0.2em 1.25em;
+  border-radius: 12px;
+
+  background-color: #7970fe;
+  box-shadow: 0 0 5px #7970fe, 0 0 25px #7970fe, 0 0 50px #7970fe, 0 0 200px #7970fe;
+
+
 }
 
 .button:hover,
 .button:focus {
-  background-color: #3ea5fa;
-  box-shadow: 0 0 5px #3ea5fa, 0 0 25px #3ea5fa, 0 0 50px #3ea5fa, 0 0 200px #3ea5fa;
+  background-color: #7970fe;
+  box-shadow: 0 0 5px #7970fe, 0 0 25px #7970fe, 0 0 50px #7970fe, 0 0 200px #7970fe;
   transform-origin: left;
 }
 
+
 .text-center {
   padding: 40px 70px 40px 70px;
+
 }
 
 
 @media screen and (max-width: 1024px){
   .card .card-content .card-title {
-    width: 33%;
+    width: 80%;
 	}
 }
 
@@ -149,8 +171,9 @@
 /*Glitch diff Browsers*/
 @media (hover) {
   .card-content {
-    transform: translateY(180%); /*Up and Down like a rollerCoaster */
+    transform: translateY(145%); /*Up and Down like a rollerCoaster */
     transition: transform  500ms ease;
+
 
   }
 
@@ -159,12 +182,12 @@
   .card:focus-within .card-content {
     transform: translateY(0);
     transition-delay: 500ms;
-
+    
   }
 
   /* fix glitch  => Firefox*/
   .card:focus-within .card-content {
-    transition-duration: 0ms;
+    transition-duration: 500ms;
 
   }
 
