navbar elements and design modification

--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,5 +1,4 @@
-<p><span class="crazy">Crazy</span> <span class="party">Party</span> <span class="stuff">Stuff</span></p>
-
+<!--<p><span class="crazy">Crazy</span> <span class="party">Party</span> <span class="stuff">Stuff</span></p>-->
 <div class="topnav">
 
   <div class="visitor-nav  d-flex justify-content-between">
@@ -44,6 +43,5 @@
 
     <% end %>
   </div>
-
 
 </div>
