--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,76 +5,11 @@ a {
   text-decoration: none;
 }
 
-.crazy {
-  margin: 8px;
-  font-size: 20px;
-  color: #ccc;
-  text-transform: uppercase;
-  transition: all 1s ease-in-out;
-  font-weight: bolder;
-  }
 
-    .crazy:hover {
-    animation: flicker 1.5s infinite alternate;
-    color: #fff;
-    text-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px #fff,
-      0 0 42px orangered,
-      0 0 82px orangered,
-      0 0 92px orangered,
-      0 0 102px orangered,
-      0 0 151px orangered;
-    color: rgb(255, 100, 100);
-}
-
-.party {
-  margin: 0px;
-  font-size: 30px;
-  color: #ccc;
-  transition: all 1s ease-in-out;
-  font-weight: bolder;
-  font-family: cursive;
-}
-
-.party:hover {
-  animation: flicker 1.5s infinite alternate;
-  color: #fff;
-  text-shadow:
-    0 0 7px #fff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px purple,
-    0 0 82px purple,
-    0 0 92px purple,
-    0 0 102px purple,
-    0 0 151px purple;
-  color: rgb(162, 50, 162);
-}
-
-.stuff {
-  margin: 8px;
-  font-size: 20px;
-  color: #ccc;
-  text-transform: uppercase;
-  transition: all 1s ease-in-out;
-  font-weight: bolder;
-}
-
-.stuff:hover {
-  animation: flicker 1.5s infinite alternate;
-  color: #fff;
-  text-shadow:
-    0 0 7px #fff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px darkslateblue,
-    0 0 82px darkslateblue,
-    0 0 92px darkslateblue,
-    0 0 102px darkslateblue,
-    0 0 151px darkslateblue;
-  color: rgb(85, 120, 240);
+.pages_nav #logo {
+  border-radius: 4px;
+  margin: 10px 4px 0 8px;
+  padding: 0;
 }
 
 * {box-sizing: border-box;}
@@ -159,4 +94,84 @@ a {
 
 .notice {
   text-align: end;
+}
+
+
+
+
+
+
+
+
+
+.crazy {
+  margin: 8px;
+  font-size: 20px;
+  color: #ccc;
+  text-transform: uppercase;
+  transition: all 1s ease-in-out;
+  font-weight: bolder;
+  }
+
+    .crazy:hover {
+    animation: flicker 1.5s infinite alternate;
+    color: #fff;
+    text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px orangered,
+      0 0 82px orangered,
+      0 0 92px orangered,
+      0 0 102px orangered,
+      0 0 151px orangered;
+    color: rgb(255, 100, 100);
+}
+
+.party {
+  margin: 0px;
+  font-size: 30px;
+  color: #ccc;
+  transition: all 1s ease-in-out;
+  font-weight: bolder;
+  font-family: cursive;
+}
+
+.party:hover {
+  animation: flicker 1.5s infinite alternate;
+  color: #fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px purple,
+    0 0 82px purple,
+    0 0 92px purple,
+    0 0 102px purple,
+    0 0 151px purple;
+  color: rgb(162, 50, 162);
+}
+
+.stuff {
+  margin: 8px;
+  font-size: 20px;
+  color: #ccc;
+  text-transform: uppercase;
+  transition: all 1s ease-in-out;
+  font-weight: bolder;
+}
+
+.stuff:hover {
+  animation: flicker 1.5s infinite alternate;
+  color: #fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px darkslateblue,
+    0 0 82px darkslateblue,
+    0 0 92px darkslateblue,
+    0 0 102px darkslateblue,
+    0 0 151px darkslateblue;
+  color: rgb(85, 120, 240);
 }
