--- a/app/views/components/_pages_nav.html.erb
+++ b/app/views/components/_pages_nav.html.erb
@@ -1,5 +1,6 @@
 <div class="pages_nav">
-  <a href="/">Home</a>
+  <a id="logo" href="/"><%= cl_image_tag("CPF_logo_hq96ja",
+      width: 40, height: 40, crop: :fill) %></a>
   <a href="/attractions">Attractions</a>
   <a href="/about">About</a>
   <a href="/contact">Contact</a>
