--- a/app/assets/stylesheets/components/_user-dropdown.scss
+++ b/app/assets/stylesheets/components/_user-dropdown.scss
@@ -19,21 +19,22 @@
   position: absolute;
   right: 15px;
   background-color: #f1f1f1;
-  width: 160px;
+  width: 147px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+.dropdown-content .dropdown-option {
   color: black;
-  padding: 12px 100%;
   text-decoration: none;
   display: block;
+  padding: 8px 16px;
+  margin: 0px;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
+.dropdown-content .dropdown-option:hover {
   background-color: #ddd;
 }
 
@@ -51,8 +52,9 @@
 .btn-logout {
   text-decoration: underline;
   border: none;
-  padding: 0px;
-  margin: 12px 16px;
+  padding-right: 80px;
+  margin-left: 12px;
+  margin-bottom: 12px;
   color: rgb(147, 146, 146);
   display: block;
 }
