fixed attractions page grid

--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -9,12 +9,11 @@
     %>
     <%= submit_tag "Search", class: "btn btn-primary" %>
     <% end %>
+</div>
 
-  <div class="card_behavior">
+  <div class="card-behavior">
     <% @attractions.each do |attraction| %>
-      <div class="card"style="background-image: url('<%= cl_image_path attraction.photo.key, crop: :fill %>')"
-        <% if attraction.photo && attraction.photo.attached? %>
-        <% end %>>
+      <div class="card" style="background-image: url(<%= cl_image_path attraction.photo.key %>)">
         <div class="card-content">
           <h4 class="card-title"><%= attraction.name %></h4>
           <p class="card-body"><%= attraction.one_liner %></p>
@@ -24,5 +23,3 @@
       </div>
     <% end %>
   </div>
-
-</div>
