--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -141,8 +141,15 @@
 
 }
 
+@media screen and (max-width: 1280px){
+  .card-behavior {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
 
 @media screen and (max-width: 1024px){
+
   .card .card-content .card-title {
     width: 80%;
 	}
@@ -203,4 +210,3 @@
     transform: scaleX(0);
   }
 }
-
