designed details on the message feature

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -8,6 +8,10 @@
   font-weight: 900;
 }
 
+h1 {
+  margin-top: 32px;
+}
+
 .banner {
   // background-size: cover;
   // background-position: center;
