navbar design adjustments

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -12,6 +12,10 @@ h1 {
   margin-top: 32px;
 }
 
+.search-bar {
+  width: 60vw;
+}
+
 .banner {
   // background-size: cover;
   // background-position: center;
