--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,14 +1,21 @@
 <div class="container">
   <h1>Party attractions</h1>
 
-    <%= form_tag attractions_path, method: :get do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Find your attraction"
-    %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
-    <% end %>
+
+  <%= form_tag attractions_path, method: :get do %>
+  <div class="search-bar">
+    <div class="d-flex">
+      <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      placeholder: "Find your attraction"
+      %>
+      <%= submit_tag "Search", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+
+
 </div>
 
   <div class="card-behavior">
