--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,8 @@
 // @import '@fortawesome/fontawesome-free/scss/solid';
 // @import '@fortawesome/fontawesome-free/scss/regular';
 // @import '@fortawesome/fontawesome-free/scss/v4-shims';
+
+.main-container {
+  min-height: calc(100vh - 58px - 100px);
+  padding-top: 1rem;
+}
