--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -20,6 +20,7 @@ a {
 
 .topnav {
   background-color: #e9e9e9;
+  height: 58px;
 }
 
 .topnav a {
@@ -30,7 +31,7 @@ a {
   padding: 12px 16px;
   text-decoration: none;
   font-size: 16px;
-  font-weight: bolder;
+  font-weight: medium;
   border-radius: 6px; // Ajout par kenza -- conccordance avec les Buttons
   margin: 5px; // ajout Kenza
 }
