--- a/app/assets/stylesheets/components/_user_bookings.scss
+++ b/app/assets/stylesheets/components/_user_bookings.scss
@@ -1,11 +1,11 @@
 .attractitle {
-  margin: 16px;
   font-size: 40px;
   color: rgba(128, 0, 128, 0.666);
   transition: all 1s ease-in-out;
   position: relative;
   font-weight: bolder;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  margin-bottom: 30px
 }
 
 .attractitle:hover {
@@ -25,27 +25,25 @@
 }
 
 .book {
-  background: #F4F4F4;
   color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  margin: 0 auto;
+  width: 80%;
 }
 
 .date {
-  background: #F4F4F4;
   color: black;
   align-items: center;
   font-size: 20px;
 }
 
 .attracname {
-  background: #F4F4F4;
   color: black;
   font-weight: bold;
   font-size: 25px;
-  padding: 16px;
   color: #ccc;
   text-transform: uppercase;
   transition: all 1s ease-in-out;
@@ -61,11 +59,11 @@
 
 .attracpic {
   border-radius: 6px;
+  box-shadow: 0px 10px 30px black;
 }
 
 .cost {
   font-size: 20px;
-  padding: 12px;
 }
 
 .pb {
