--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 // Specific CSS for your home-page
-*,
+
 *::before,
 *::after {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  font-weight: 900;
 }
 
 .banner {
@@ -120,12 +119,12 @@
   text-decoration: none;
   color: #F4F4F4;
   padding: 0.2em 1.25em;
-  border-radius: 12px;
+  border-radius: 6px;
 
   background-color: #7970fe;
   box-shadow: 0 0 5px #7970fe, 0 0 25px #7970fe, 0 0 50px #7970fe, 0 0 200px #7970fe;
 
-
+  font-size: x-large; /* essai, afin de mettre en valeur l'importance de ce bouton */
 }
 
 .button:hover,
