--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
     <%= render "components/navbar" %>
     <!-- <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p> -->
-    <%= yield %>
+    <div class="main-container">
+      <%= yield %>
+    </div>
     <%= render "components/footer" %>
   </body>
 </html>
