--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,7 +19,10 @@ a {
 }
 
 .topnav {
-  background-color: #e9e9e9;
+  background-color: rgb(240,240,240);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 .topnav a {
