search bar design

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -11,6 +11,10 @@ h1 {
   margin-top: 32px;
 }
 
+.search-bar {
+  width: 50vw;
+}
+
 .banner {
   // background-size: cover;
   // background-position: center;
