--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,12 +13,12 @@
         <div class="card-content">
           <h4 class="card-title"><%= attraction.name %></h4>
           <p class="card-body"><%= attraction.one_liner %></p>
-          <p class="card-body"><%= attraction.price %> </strong>€ per day</p>
+          <p class="card-body"><%= attraction.price %>€ per day</p>
           <%= link_to "Learn More...", attraction_path(attraction), class: 'button' %>
         </div>
       </div>
     <% end %>
   </div>
 <div class="text-center">
-  <a href="./attractions" class="button-attractions">Voir toutes les attractions</a>
+  <a href="./attractions" class="button-attractions">See all... 🎡</a>
 </div>
