--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -110,7 +110,9 @@
   color: #F4F4F4;
   padding: 0.2em 1.25em;
   border-radius: 12px;
-  transform-origin: left;
+
+  background-color: #7970fe;
+  box-shadow: 0 0 5px #7970fe, 0 0 25px #7970fe, 0 0 50px #7970fe, 0 0 200px #7970fe;
 
 }
 
@@ -130,9 +132,10 @@
 
 .button:hover,
 .button:focus {
-  background-color: #7970fe;
-  box-shadow: 0 0 5px #7970fe, 0 0 25px #7970fe, 0 0 50px #7970fe, 0 0 200px #7970fe;
+  background-color: #8774b5f7;
+  box-shadow: 0 0 5px #8774b5f7, 0 0 25px #8774b5f7, 0 0 50px #8774b5f7, 0 0 200px #8774b5f7;
   transform-origin: left;
+  color: #F4F4F4;
 }
 
 
@@ -182,7 +185,7 @@
   .card:focus-within .card-content {
     transform: translateY(0);
     transition-delay: 500ms;
-    
+
   }
 
   /* fix glitch  => Firefox*/
