--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
+@import "show" ;
 // Specific CSS for your home-page
 *,
 *::before,
@@ -8,6 +10,7 @@
   font-weight: 900;
 }
 
+
 .banner {
   // background-size: cover;
   // background-position: center;
@@ -15,6 +18,7 @@
   padding: 250px;
   box-shadow: 0px 5px 20px #999;
 }
+
 
 .banner h1 {
   color: #F4F4F4;
@@ -57,6 +61,7 @@
   flex: 1 1 auto;
   padding: 0.1rem;
   font-size: 18px;
+  font-weight: 400;
 }
 
 
@@ -77,6 +82,7 @@
   position: relative;
   font-family: 'Roboto', sans-serif;
   font-weight: bolder;
+  font-weight: 900;
 
 }
 
@@ -110,29 +116,31 @@
   color: #F4F4F4;
   padding: 0.2em 1.25em;
   border-radius: 12px;
-  transform-origin: left;
+
+  background-color: #7970fe;
+  box-shadow: 0 0 5px #7970fe, 0 0 25px #7970fe, 0 0 50px #7970fe, 0 0 200px #7970fe;
 
 }
 
-.button-attractions {
+.button-attractions { // See all
   cursor: pointer;
   display: inline-block;
   text-decoration: none;
   color: #F4F4F4;
-  padding: 0.2em 1.25em;
+  padding: 1.3em 3em;
   border-radius: 12px;
-
   background-color: #7970fe;
   box-shadow: 0 0 5px #7970fe, 0 0 25px #7970fe, 0 0 50px #7970fe, 0 0 200px #7970fe;
-
-
+  transform-origin: left;
 }
 
 .button:hover,
 .button:focus {
-  background-color: #7970fe;
-  box-shadow: 0 0 5px #7970fe, 0 0 25px #7970fe, 0 0 50px #7970fe, 0 0 200px #7970fe;
+  background-color: #8774b5f7;
+  box-shadow: 0 0 5px #8774b5f7, 0 0 25px #8774b5f7, 0 0 50px #8774b5f7, 0 0 200px #8774b5f7;
   transform-origin: left;
+  color: #F4F4F4;
+
 }
 
 
@@ -140,6 +148,9 @@
   padding: 40px 70px 40px 70px;
 
 }
+
+
+
 
 
 @media screen and (max-width: 1024px){
@@ -174,7 +185,6 @@
     transform: translateY(145%); /*Up and Down like a rollerCoaster */
     transition: transform  500ms ease;
 
-
   }
 
   /* fix glitch  => Firefox*/
@@ -203,4 +213,3 @@
     transform: scaleX(0);
   }
 }
-
