--- a/app/assets/stylesheets/components/_user_bookings.scss
+++ b/app/assets/stylesheets/components/_user_bookings.scss
@@ -1,27 +1,10 @@
 .attractitle {
   font-size: 40px;
-  color: rgba(128, 0, 128, 0.666);
-  transition: all 1s ease-in-out;
+  color: black;
   position: relative;
   font-weight: bolder;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin-bottom: 30px
-}
-
-.attractitle:hover {
-  animation: flicker 1.5s infinite alternate;
-  color: #fff;
-  text-shadow:
-    0 0 7px #fff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px purple,
-    0 0 82px purple,
-    0 0 92px purple,
-    0 0 102px purple,
-    0 0 151px purple;
-  color: rgb(162, 50, 162);
-  position: sticky;
 }
 
 .book {
@@ -44,18 +27,11 @@
   color: black;
   font-weight: bold;
   font-size: 25px;
-  color: #ccc;
   text-transform: uppercase;
-  transition: all 1s ease-in-out;
   position: relative;
   font-weight: bold;
+  font-family: 'Roboto', sans-serif;
 }
-
-.attracname:hover{
-  font-size: 30px;
-  color: teal;
-  text-shadow: rgb(12, 198, 189) 10px 10px 10px;
-  }
 
 .attracpic {
   border-radius: 6px;
@@ -72,39 +48,5 @@
   margin-left: 32px;
   font-weight: lighter;
   color: rgb(83, 83, 83);
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
-
-// @keyframes flicker  {
-//   0% {text-shadow:
-//     0 0 0px #fff,
-//     0 0 0px #fff,
-//     0 0 0px #fff,
-//     0 0 0px purple,
-//     0 0 0px purple,
-//     0 0 0px purple,
-//     0 0 0px purple,
-//     0 0 0px purple;}
-//   50% {
-//     text-shadow:
-//     0 0 0px #fff,
-//     0 0 0px #fff,
-//     0 0 1px #fff,
-//     0 0 2px purple,
-//     0 0 8px purple,
-//     0 0 9px purple,
-//     0 0 10px purple,
-//     0 0 15px purple;
-//   }
-//   100% {
-//     text-shadow:
-//     0 0 7px #fff,
-//     0 0 10px #fff,
-//     0 0 21px #fff,
-//     0 0 42px purple,
-//     0 0 82px purple,
-//     0 0 92px purple,
-//     0 0 102px purple,
-//     0 0 151px purple;
-//   }
-// }
