--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -13,7 +13,9 @@
     <% else %>
       <img class="avatar mx-1" src="https://www.pasrc.org/sites/g/files/toruqf431/files/styles/freeform_750w/public/2021-03/blank-profile-picture_0.jpg?itok=iSBmDxc8">
     <% end %>
-    <div><%= link_to "Send a message", conversations_path(sender_id: current_user.id, recipient_id: @attraction.user.id), method: 'post'%></div>
+    <% unless current_user.nil? %>
+      <div><%= link_to "Send a message", conversations_path(sender_id: current_user.id, recipient_id: @attraction.user.id), method: 'post'%></div>
+    <% end %>
   </div>
 </div>
 
