uniformisation des container

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main-container">
   <h1 class="text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
       url('https://cdn.shopify.com/s/files/1/0467/5026/9606/products/lets-party-neon-sign_800x_613182e2-cf3a-4253-9c2e-2fcb6db94e44_600x.jpg?v=1631195583');
       color: white; height:300px">About us</h1>
