--- a/app/views/attractions/edit.html.erb
+++ b/app/views/attractions/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main-container">
   <h1>Edit <%= @attraction.name %></h1>
   <%= render "form", attraction: @attraction %>
 </div>
