--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main-container">
   <h1>Party attractions</h1>
 
     <%= form_tag attractions_path, method: :get do %>
