--- a/app/views/attractions/new.html.erb
+++ b/app/views/attractions/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main-container">
   <h1>New party attraction</h1>
   <%= render "form", attraction: @attraction %>
 </div>
