--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main-container">
   <p id="notice"><%= notice %></p>
 
 <div class="d-flex justify-content-between">
