--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,5 @@
-<div class="main-container">
-  <div class="container-messages">
+
+  <div class="main-container container-messages">
     <% recipient = Conversation.find(params[:conversation_id]).recipient %>
     <% sender = Conversation.find(params[:conversation_id]).sender %>
     <h1>Chat with
