--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -131,7 +131,7 @@
 
   background-color: #7970fe;
   box-shadow: 0 0 5px #7970fe, 0 0 25px #7970fe, 0 0 50px #7970fe, 0 0 200px #7970fe;
-
+}
 
 .button:hover,
 .button:focus {
