--- a/app/views/attractions/_review_form.html.erb
+++ b/app/views/attractions/_review_form.html.erb
@@ -4,6 +4,6 @@
                       insert_in_list_target: "form",
                       action: "submit->insert-in-list#send"
                     }) do |f| %>
-  <%= f.input :content, as: :text %>
-  <%= f.button :submit %>
+  <%= f.input :content, as: :text, label: false %>
+  <%= f.button :submit, class: 'btn btn-success' %>
 <% end %>
